src/shared/footer/Footer.scss
footer {
 /*   left: 0;
    bottom: 0;
    width: 100%;
    padding: 20px;
    position: absolute;
    color: #FFFFFF;
    text-align: center !important;
*/
    left: 0;
    margin-top: 32vh;
    height: 80px;
    /* bottom: -274px; */
    width: 100%;
    padding: 20px;
    position: relative;
    color: #FFFFFF;
    text-align: center !important;


    a {
        color: #FFFFFF;
    }

    .container {
        width: 50%;
    }

    .logo {
        width: 25px;
        height: 25px;
    }

    .logo:hover, logo:focus {
        filter: invert(0.9);
    }
}

@media only screen and (max-width: 768px) {
    footer {
        display: none;
    }
}


@media only screen and (max-height: 400px) {
    footer {
        display: none;
    }


}

